manifests/cart_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
      - name: cart-service
        image: vinay74/cart_service
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart-service
  ports:
  - protocol: TCP
    port: 5003
    targetPort: 5003
