manifests/dashboard_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-service
  template:
    metadata:
      labels:
        app: dashboard-service
    spec:
      containers:
      - name: dashboard-service
        image: vinay74/dashboard_service
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  selector:
    app: dashboard-service
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
