manifests/db_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-service
  template:
    metadata:
      labels:
        app: db-service
    spec:
      containers:
      - name: db-service
        image: vinay74/db_service
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db-service
  ports:
  - protocol: TCP
    port: 5002
    targetPort: 5002
